client/reader/search-stream/style.scss
.is-reader-page .main.search-stream {
	max-width: 960px;
}

.search-stream__intro {

	@include breakpoint( "<660px" ) {
		margin-left: 16px;
	}
}

.search-stream .search {
	margin-bottom: 0;
}

.is-reader-page .search-stream .reader-post-card.card {
	width: 100%;
}

.is-reader-page .search-stream__fixed-area {
	background-color: $white;
	position: fixed;
	top: 0;
	padding-top: 47px;
	z-index: 20;
	-webkit-font-smoothing: subpixel-antialiased; // Fixes fixed elements text aliasing in Safari

	@include breakpoint( ">660px" ) {
		padding-top: 77px;
	}
}

.search-stream .reader__content .reader-post-card:first-child {
	margin-top: 120px;
}

.search-stream .search-stream__input-card.card {
	box-shadow: 0 0 0 2px lighten( $gray, 20% ), 0 1px 2px lighten( $gray, 20% );
}

// Fix for smaller breakpoint on the new site-search
.is-reader-page .search-stream__with-sites .search-stream__fixed-area {
	padding-top: 20px;

	@include breakpoint( ">660px" ) {
		padding-top: 77px;
	}
}

.search-stream__input-card.card {
	margin-bottom: 16px;
	padding: 0;
	z-index: z-index( 'root', '.search-stream__input-card' );
}

// Top margins
// Top margin for post recs and post results with suggested terms
.search-stream .search-stream__recommendation-list-item:nth-child(2),
.search-stream .search-stream__recommendation-list-item:nth-child(3) {
	margin-top: 100px;
}

.search-stream .search-stream__recommendation-list-item:nth-child(3) {

	@media #{$reader-related-card-v2-breakpoint-medium} {
		margin-top: 0;
	}

	@media #{$reader-related-card-v2-breakpoint-small} {
		margin-top: 0;
	}
}

// Top margin for post recs without suggested terms
.search-stream.search-stream__with-sites .search-stream__recommendation-list-item:nth-child(2),
.search-stream.search-stream__with-sites .search-stream__recommendation-list-item:nth-child(3) {
	margin-top: 70px;

	@include breakpoint( ">660px" ) {
		margin-top: 90px;
	}
}

.search-stream.search-stream__with-sites .search-stream__single-column-results {
	padding-top: 150px;
}

.search-stream.search-stream__with-sites .search-stream__single-column-results .search-stream__recommendation-list-item:nth-child(2) {
	margin-top: -60px;
}

.search-stream.search-stream__with-sites .search-stream__single-column-results .search-stream__recommendation-list-item:nth-child(3) {
	margin-top: -60px;

	@media #{$reader-related-card-v2-breakpoint-medium} {
		margin-top: 0;
	}

	@media #{$reader-related-card-v2-breakpoint-small} {
		margin-top: 0;
	}
}

// Top margin for site results
.search-stream.search-stream__with-sites .is-two-columns .search-stream__post-results .reader-post-card:nth-child(2),
.search-stream.search-stream__with-sites .is-two-columns .search-stream__site-results {
	margin-top: 150px;
}

// Search term suggestions
.search-stream__blank-suggestions {
	border-bottom: 1px solid lighten( $gray, 20% );
	font-size: 13px;
	color: $gray;
	padding-bottom: 15px;
	text-align:left;

	a,
	a:visited {
		color: $blue-medium;
	}

	a:hover {
		color: $blue-light;
	}

	@include breakpoint( "<660px" ) {
		padding-left: 16px;
	}
}

// Custom breakpoints
$reader-post-card-breakpoint-large: "( min-width: 961px ) and ( max-width: 1040px )";
$reader-post-card-breakpoint-medium: "( min-width: 661px ) and ( max-width: 940px )";
$reader-post-card-breakpoint-small: "( max-width: 550px )";

// Post recommendations in Search
.is-reader-page .search-stream .reader__content {
	display: flex;
	flex-flow: wrap;
}

.is-reader-page .search-stream__recommendation-list-item {
	box-sizing: border-box;
	border-bottom: 1px solid lighten( $gray, 20% );
	display: flex;
	flex-basis: calc( 50% - 15px );
	margin-left: 15px;
	padding: 18px 0 21px 0;

	@media #{$reader-related-card-v2-breakpoint-medium} {
		flex-basis: 100%;
		margin: 0;
	}

	@include breakpoint( "<660px" ) {
		flex-basis: calc( 50% - 30px );
		margin-left: 15px;
		margin-right: 15px;
	}

	@media #{$reader-related-card-v2-breakpoint-small}  {
		flex-basis: 100%;
		margin-left: 15px;
		margin-right: 15px;
	}

	&:nth-child( 2n ) {
		flex-basis: calc( 50% - 15px );
		margin-left: 0;
		margin-right: 15px;

		@media #{$reader-related-card-v2-breakpoint-medium} {
			flex-basis: 100%;
		}

		@include breakpoint( "<660px" ) {
			flex-basis: calc( 50% - 30px );
			margin-left: 15px;
			margin-right: 15px;
		}

		@media #{$reader-related-card-v2-breakpoint-small} {
			flex-basis: 100%;
			margin-left: 15px;
			margin-right: 15px;
		}
	}

	.reader-related-card-v2__post {
		max-height: 208px;

		@media #{$reader-related-card-v2-breakpoint-medium} {
			max-height: 105px;
		}

		@include breakpoint( "<660px" ) {
			max-height: 206px;
		}

		@media #{$reader-related-card-v2-breakpoint-small} {
			max-height: 103px;
		}

		.reader-related-card-v2__excerpt {
			-webkit-line-clamp: initial;
		}
	}

	 .has-thumbnail {

		.reader-related-card-v2__post {
			max-height: 110px;

			@media #{$reader-related-card-v2-breakpoint-small} {
				max-height: 104px;
			}

			@media #{$reader-related-card-v2-breakpoint-medium} {
				max-height: 104px;
			}
		}

		.reader-related-card-v2__meta {
			margin-bottom: 18px;
		}
	}

	.reader-related-card-v2__featured-image {
		margin: 0 0 14px;
	}

	.reader-related-card-v2__meta {
		align-items: flex-start;
		margin-bottom: 12px;

		.reader-related-card-v2__byline,
		.reader-related-card-v2__byline-author,
		.reader-related-card-v2__byline-site {
			margin-top: 0;
		}

		.reader-related-card-v2__byline-author {
			margin-bottom: -3px;
		}

		.follow-button {
			height: 25px;
			margin-top: 0;
			position: relative;
				top: -2px;

			@include breakpoint( "<480px" ) {
				margin-right: 0;
			}
		}

		.gravatar {
			margin: 4px 8px 0 0;
		}
	}
}

// Date and Relevance sorter
.search-stream__sort-picker {
	position: absolute;
	right: 50px;
	top: 11px;
	z-index: z-index( 'root', '.search-stream__sort-picker' );
}

// Posts and Sites results
.search-stream .search-stream__results.is-two-columns {
	display: flex;
}

// Post and Sites static headers
.search-stream__headers {
	color: $gray;
	font-size: 14px;
	display: flex;
	font-weight: 600;
	list-style-type: none;
	margin: 0;
	padding-top: 20px;
	text-transform: uppercase;
}

.search-stream .search-stream__site-header {
	margin-left: 40px;
	max-width: 265px;
	width: 100%;
}

.search-stream__post-header,
.search-stream__site-header {
	border-bottom: 1px solid lighten( $gray, 30% );
	padding-bottom: 10px;
	width: 100%;
}

// Posts and Sites tabbed headers
.search-stream__header .section-nav-tabs__dropdown,
.search-stream__header .section-nav__mobile-header {
	display: none;
}

.search-stream__header .section-nav {
	background: inherit;
	border-bottom: 2px solid lighten( $gray, 30% );
	box-shadow: none;
	margin-bottom: 0;
	padding-bottom: 0;
}

.search-stream__header .section-nav-group {
	display: flex;
	flex: 1 0 0%;
	margin-top: 5px;
	width: 0;
}

.search-stream__header .section-nav-tabs__list {
	display: flex;

	.section-nav-tab.is-selected {
		border-bottom: 2px solid $gray-dark;
	}

	.is-selected .section-nav-tab__link {
		color: $gray-dark;
	}

	.section-nav-tab__link {
		background-color: transparent;
		color: $blue-wordpress;
		padding: 16px;

		&:hover {
			color: $blue-medium;
		}
	}

	.section-nav-tab__text {
		font-weight: 600;
		font-size: 13px;
		letter-spacing: .04em;
		text-transform: uppercase;
		width: 100%;
	}
}

// Site results
.search-stream .search-stream__site-results {
	max-width: 265px;
	min-width: 265px;
	margin-left: 40px;

	.reader-infinite-stream__row-wrapper {
		border: 0;
	}

	.reader-subscription-list-item .follow-button__label,
	.reader-subscription-list-item__settings-label {
		display: none;
	}
}

// Custom styling for cards in post results
.search-stream__results.is-two-columns {
	display: flex;
}

.search-stream__results.is-two-columns .search-stream__post-results {
	max-width: 660px;

	.reader-post-card__post {

		@media #{$reader-post-card-breakpoint-large} {
			flex-direction: column;
		}

		@include breakpoint( "<960px" ) {
			flex-direction: column;
		}
	}

	.reader-post-card.card.has-thumbnail .reader-featured-image {

		@media #{$reader-post-card-breakpoint-large} {
			height: 80px;
			margin: 0 0 20px;
			max-width: 100%;
		}

		@include breakpoint( "<960px" ) {
			height: 80px;
			margin: 0 0 20px;
			max-width: 100%;
		}
	}

	.reader-post-card.is-photo .reader-post-card__title {
		white-space: normal;
	}

	.reader-post-card.is-gallery .reader-post-card__gallery-item:last-child {

		@media #{$reader-post-card-breakpoint-large} {
			display: none;
		}

		@include breakpoint( "<960px" ) {
			display: block;
		}
	}

	.reader-share__button-label,
	.comment-button__label-status,
	.like-button__label-status {
		display: none;
	}

	.reader-share__button {
		top: 2px;
	}
}

.search-stream__results.is-two-columns .search-stream__site-results .gridicons-cog {
	left: -3px;
	top: 15px;
}

.card.reader-search-card.is-photo {

	@include breakpoint( "<660px" ) {
		z-index: z-index( 'root', '.reader-search-card' );
	}
}

